# 3dviewer_cpp

./: .gitignore  README.md
src/: Doxyfile  Makefile
src/Frontend/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  oglwidget.cpp  oglwidget.h  settings.cpp  settings.h
src/c_files/: 3d_viewer.c  3d_viewer.h  3d_viewer_tests.c
src/cpp_files/: 3d_viewer_tests.cpp  aboba  aboba.cpp  obj_structs.hpp  s21_controller.cpp  s21_controller.hpp  s21_model.cpp  s21_model.hpp
src/giflib/: egif_lib.c
